...
        android:hint="@string/nick"
        android:drawablePadding="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signUpButton"
        android:layout_gravity="top|center"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
</LinearLayout>
