...
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="nick">User nick</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="restore_password">Password</string>
    <string name="loading">Loading...</string>
    <string name="directions_list_menu_title">Actions</string>
    <string name="directions_list_menu_edit">Edit</string>
    <string name="directions_list_menu_delete">Delete</string>
    <string name="step_success_update_message">Step state changed to %1$s</string>
    <string name="steps_failed_update_message">Unfortunately, an error has occurred</string>
...
    <string name="navigation_item_statistics">Statistics</string>
    <string name="navigation_item_sign_out">Sign out</string>

    <string name="user_profile_first_name">First name</string>
    <string name="user_profile_last_name">Last name</string>
    <string name="user_profile_email">Email</string>
    <string name="user_profile_nick">Nick</string>
    <string name="user_profile_location">Location</string>
    <string name="user_profile_description">Description</string>
    <string name="user_profile_photo">Take a photo</string>
    <string name="user_profile_collection">Upload from collection</string>

    <string name="internal_server_error">Internal server error. Please try it later</string>
...
